# scrawl

./: Cargo.toml  README.md
src/: app.rs  input.rs  main.rs  todo.rs
src/app/: actions.rs  state.rs
src/input/: events.rs  key.rs
src/todo/: entry.rs
